--- a/check-twice.html
+++ b/check-twice.html
@@ -10,7 +10,7 @@
 	
 </head>
 <body>
-	<h2>PTT-APINK 恩地迷你一輯 Dream 訂單查詢</h2>
+	<h2>PTT-TWICE 恩地迷你一輯 Dream 訂單查詢</h2>
 	<!-- <p class="all">目前訂購數量：<span></span></p> -->
 
 	<p>請輸入帳號：<input type="text" name="ptt" value="" placeholder="" id="inputID"></p>
