--- a/check-twice.html
+++ b/check-twice.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PTT-APINK 恩地迷你一輯 Dream 訂單查詢</title>
+	<title>PTT-TWICE 迷你二輯 PAGE TWO 訂單查詢</title>
 	<script src="jquery-1.11.0.min.js"></script>
 	<script src="js/twice.js"></script>
 	
 	
 </head>
 <body>
-	<h2>PTT-TWICE 恩地迷你一輯 Dream 訂單查詢</h2>
+	<h2>PTT-TWICE 迷你二輯 PAGE TWO 訂單查詢</h2>
 	<!-- <p class="all">目前訂購數量：<span></span></p> -->
 
 	<p>請輸入帳號：<input type="text" name="ptt" value="" placeholder="" id="inputID"></p>
