--- a/check-twice.html
+++ b/check-twice.html
@@ -34,8 +34,8 @@
 		<li class="tel"></li>
 		<li class="adds"></li>
 		<li class="change"></li>
-		<!-- <li class="check"></li>
-		<li class="trackno-1"></li>
+		<li class="check"></li>
+		<!-- <li class="trackno-1"></li>
 		<li class="trackno-2"></li> -->
 	</ul>
 
